# SlurmUtils

./: .gitignore  pyproject.toml  setup.py  shellUtils.py
.github/workflows/: pylint.yml  python-package.yml
DecentJob/: metaJob.py
Slurm/: shellUtils.py
slurmutils/DecentJob/: metaJob.py
slurmutils/Slurm/: shellUtils.py  slurm.py
slurmutils/SlurmJob/: job.py
