[tool.poetry]
name = "slurmutils"
version = "0.1.5"
description = ""
authors = ["Yuxiang Luo <luo.929@osu.edu>"]
license = "GPL2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas =[
    {version="^2.0.3",python="3.8"},
    {version="^2.2.2",python="3.9"}
]


[tool.poetry.group.dev.dependencies]
build = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
